# vuanem-netsuite-service

./: .eslintrc.yml  .gitignore  .gitmodules  main.py  main2.py  package.json  pyproject.toml  tsconfig.json
.github/workflows/: main.yaml
controller/: netsuite.py
services/: restlet.py
src/: index.ts
src/controller/: common.ts  ecommerce.ts  lazada.ts  netsuite.ts  restlet.ts  shopee.ts  telegram.ts
src/libs/: ecommerce.ts  restlet.ts
src/types/: common.d.ts  ecommerce.d.ts  restlet.d.ts  shopee.d.ts  telegram.d.ts
